2 added Json and shuffle set

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <p>These flashcards are based on the Spaced Repetition System (SRS) in which difficult cards appear more frequently and easier cards less often as determined by the learner's rating.  The level is beginners Czech (European level A1).</p><br>
 <div class=directions>    
     <p>Directions:</p>
-    <p>Click on the card to see the reverse side.<br>Click on Easy/Medium/Hard to assign a card to a difficulty rating and move to the next card.<br>When you click on Next a new deck is formed made up of all the cards remaining in the old deck plus a combination of cards assigned a rating, with hard cards appearing more often relative to easy cards.  If there are not enough hard or medium cards, all the cards will be included in the deck.<br>If you run out of cards, click on Next again.<br>Click on Reset to revert to the original deck.</p>   
+    <p>Click on the card to see the reverse side.<br>Click on Easy/Medium/Hard to assign a card to a difficulty rating and move to the next card.<br>When you click on New a new deck is formed made up of all the cards remaining in the old deck plus a combination of cards assigned a rating, with hard cards appearing more often relative to easy cards.  If there are not enough hard or medium cards, all the cards will be included in the deck.<br>If you run out of cards, click on New again.<br>Click on Reset to revert to the original deck.</p>   
 </div>
 </div>
 </body>
